--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -25,3 +25,4 @@ PROJECT_NOT_FOUND=Project does not found
 NAME_IS_EMPTY=Name is Empty
 CONNECTION_URL_EMPTY=Connection URL is Empty
 PLUGIN_INITIALIZING=Dolteng Plugin initializing ....
+JDBC_DICON_LOADING=load jdbc.dicon
