--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -26,3 +26,4 @@ NAME_IS_EMPTY=Name is Empty
 CONNECTION_URL_EMPTY=Connection URL is Empty
 PLUGIN_INITIALIZING=Dolteng Plugin initializing ....
 JDBC_DICON_LOADING=load jdbc.dicon
+ImportsStructure_operation_description=Updating imports...
