git-svn-id: https://www.seasar.org/svn/chura/trunk@39 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -26,3 +26,4 @@ NAME_IS_EMPTY=Name is Empty
 CONNECTION_URL_EMPTY=Connection URL is Empty
 PLUGIN_INITIALIZING=Dolteng Plugin initializing ....
 JDBC_DICON_LOADING=load jdbc.dicon
+ImportsStructure_operation_description=Updating imports...
