--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -27,3 +27,5 @@ CONNECTION_URL_EMPTY=Connection URL is Empty
 PLUGIN_INITIALIZING=Dolteng Plugin initializing ....
 JDBC_DICON_LOADING=load jdbc.dicon
 ImportsStructure_operation_description=Updating imports...
+CHURA_PROJECT_DESCRIPTION=Create a Chura project in the workspace or in an external location.
+CREATING_PROJECT=Creating Project ....
