--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -29,3 +29,5 @@ JDBC_DICON_LOADING=load jdbc.dicon
 ImportsStructure_operation_description=Updating imports...
 CHURA_PROJECT_DESCRIPTION=Create a Chura project in the workspace or in an external location.
 CREATING_PROJECT=Creating Project ....
+PACKAGE_NAME_IS_EMPTY=Package name is Empty.
+INVALID_PACKAGE_NAME=Invalid package name. {0}
