--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -31,3 +31,4 @@ CHURA_PROJECT_DESCRIPTION=Create a Chura project in the workspace or in an exter
 CREATING_PROJECT=Creating Project ....
 PACKAGE_NAME_IS_EMPTY=Package name is Empty.
 INVALID_PACKAGE_NAME=Invalid package name. {0}
+INVALID_HTML_PATH=This file doesn't contain by viewroot
