--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin_ja.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin_ja.properties
@@ -15,3 +15,6 @@
 ###############################################################################
 author=Seasar\u30d5\u30a1\u30a6\u30f3\u30c7\u30fc\u30b7\u30e7\u30f3
 plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
+
+
+openPagePair.label=Open Page Pair
