--- a/plugin_ja.properties
+++ b/plugin_ja.properties
@@ -18,3 +18,4 @@ plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
 
 
 openPagePair.label=Open Page Pair
+openActionPair.label=Open Action Pair
