git-svn-id: https://www.seasar.org/svn/chura/trunk@126 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/plugin_ja.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/plugin_ja.properties
@@ -18,3 +18,4 @@ plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
 
 
 openPagePair.label=Open Page Pair
+openActionPair.label=Open Action Pair
