--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -32,3 +32,4 @@ CREATING_PROJECT=Creating Project ....
 PACKAGE_NAME_IS_EMPTY=Package name is Empty.
 INVALID_PACKAGE_NAME=Invalid package name. {0}
 INVALID_HTML_PATH=This file doesn't contain by viewroot
+ACTION_HAS_SERVICE=This operation will be continue on {0}
