--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -33,3 +33,4 @@ PACKAGE_NAME_IS_EMPTY=Package name is Empty.
 INVALID_PACKAGE_NAME=Invalid package name. {0}
 INVALID_HTML_PATH=This file doesn't contain by viewroot
 ACTION_HAS_SERVICE=This operation will be continue on {0}
+SERVICE_EXISTS=Service class is already exists...
