git-svn-id: https://www.seasar.org/svn/chura/trunk@139 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -33,3 +33,4 @@ PACKAGE_NAME_IS_EMPTY=Package name is Empty.
 INVALID_PACKAGE_NAME=Invalid package name. {0}
 INVALID_HTML_PATH=This file doesn't contain by viewroot
 ACTION_HAS_SERVICE=This operation will be continue on {0}
+SERVICE_EXISTS=Service class is already exists...
