git-svn-id: https://www.seasar.org/svn/chura/trunk@183 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -29,8 +29,15 @@ JDBC_DICON_LOADING=load jdbc.dicon
 ImportsStructure_operation_description=Updating imports...
 CHURA_PROJECT_DESCRIPTION=Create a Chura project in the workspace or in an external location.
 CREATING_PROJECT=Creating Project ....
+CREATE_BASE_PROJECT=Create Base Project ....
 PACKAGE_NAME_IS_EMPTY=Package name is Empty.
 INVALID_PACKAGE_NAME=Invalid package name. {0}
 INVALID_HTML_PATH=This file doesn't contain by viewroot
 ACTION_HAS_SERVICE=This operation will be continue on {0}
 SERVICE_EXISTS=Service class is already exists...
+PROCESS=Process ... {0}
+BEGINING_OF_CREATE=Create Chura Project ....
+RELOAD_RESOURCES=Reload copied resources ...
+ADD_NATURE_OF=Add {0} Nature ...
+BUILD_PROJECT=Build Java Project
+RELOAD_DATABASE_VIEW=Reload Dolteng Database View
