--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -41,3 +41,6 @@ RELOAD_RESOURCES=Reload copied resources ...
 ADD_NATURE_OF=Add {0} Nature ...
 BUILD_PROJECT=Build Java Project
 RELOAD_DATABASE_VIEW=Reload Dolteng Database View
+PROCESS_MAPPING=Process Mapping ...{0}
+JUMP_TO_HTML=Jump to {0}
+JUMP_TO_CLASS=Jump to {0}#{1}
