HTMLとPage,Actionの間に対応関係がある場合、エディタの左側にアイコンが出る様にした。 また、HTMLのgoで始まるIDは、対応するhtmlがある時、アイコンが出力される。
git-svn-id: https://www.seasar.org/svn/chura/trunk@203 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -41,3 +41,6 @@ RELOAD_RESOURCES=Reload copied resources ...
 ADD_NATURE_OF=Add {0} Nature ...
 BUILD_PROJECT=Build Java Project
 RELOAD_DATABASE_VIEW=Reload Dolteng Database View
+PROCESS_MAPPING=Process Mapping ...{0}
+JUMP_TO_HTML=Jump to {0}
+JUMP_TO_CLASS=Jump to {0}#{1}
