--- a/plugin_ja.properties
+++ b/plugin_ja.properties
@@ -20,3 +20,5 @@ plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
 openPagePair.label=Open Page Pair
 openActionPair.label=Open Action Pair
 createService.label=Create Service
+openDaoPair.label=Open Dao Pair
+openEntityPair.label=Open Entity Pair
