テンプレート作りかけ。
git-svn-id: https://www.seasar.org/svn/chura/trunk@232 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -36,9 +36,11 @@ INVALID_HTML_PATH=This file doesn't contain by viewroot
 ACTION_HAS_SERVICE=This operation will be continue on {0}
 SERVICE_EXISTS=Service class is already exists...
 PROCESS=Process ... {0}
-BEGINING_OF_CREATE=Create Chura Project ....
+BEGINING_OF_CREATE=Create Chura Project ...
 RELOAD_RESOURCES=Reload copied resources ...
 ADD_NATURE_OF=Add {0} Nature ...
 BUILD_PROJECT=Build Java Project
 RELOAD_DATABASE_VIEW=Reload Dolteng Database View
 PROCESS_MAPPING=Process Mapping ...{0}
+GENERATE_SCAFFOLD_CODES=Generate Scaffold Codes ?
+GENERATE_CODES=Generate Codes ...
