--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -44,3 +44,4 @@ RELOAD_DATABASE_VIEW=Reload Dolteng Database View
 PROCESS_MAPPING=Process Mapping ...{0}
 GENERATE_SCAFFOLD_CODES=Generate Scaffold Codes ?
 GENERATE_CODES=Generate Codes ...
+UNSUPPORTED_CLASS_IS_LOADED=eclipse shuld boot Old JVM. Use Java5.0 or more.
