--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -46,3 +46,4 @@ GENERATE_SCAFFOLD_CODES=Generate Scaffold Codes ?
 GENERATE_CODES=Generate Codes ...
 UNSUPPORTED_CLASS_IS_LOADED=eclipse shuld boot Old JVM. Use Java5.0 or more.
 ONLY_USE_VALID_URL={0} is Only Use Valid URL.
+REGISTER_MOCKS=Register Mocks ...
