--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -46,4 +46,6 @@ GENERATE_SCAFFOLD_CODES=Generate Scaffold Codes ?
 GENERATE_CODES=Generate Codes ...
 UNSUPPORTED_CLASS_IS_LOADED=eclipse shuld boot Old JVM. Use Java5.0 or more.
 ONLY_USE_VALID_URL={0} is Only Use Valid URL.
+INVALID_OUTPUT_FILE=Invalid output file path.
+COPY_FROM_AND_COPY_TO_ARE_SAME=Copy from File and Copy to File are same. Select differnt path.
 REGISTER_MOCKS=Register Mocks ...
