git-svn-id: https://www.seasar.org/svn/chura/trunk@365 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -46,4 +46,6 @@ GENERATE_SCAFFOLD_CODES=Generate Scaffold Codes ?
 GENERATE_CODES=Generate Codes ...
 UNSUPPORTED_CLASS_IS_LOADED=eclipse shuld boot Old JVM. Use Java5.0 or more.
 ONLY_USE_VALID_URL={0} is Only Use Valid URL.
+INVALID_OUTPUT_FILE=Invalid output file path.
+COPY_FROM_AND_COPY_TO_ARE_SAME=Copy from File and Copy to File are same. Select differnt path.
 REGISTER_MOCKS=Register Mocks ...
