--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -16,8 +16,8 @@
 SELECT_PROJECT=Select Dependent Java Project
 JDBC_DRIVER_FINDING=Finding Driver Class ...
 JDBC_DRIVER_FINDING_CANCELLED=Finding Driver Class Cancelled
-CONNECTION_TEST_SUCCEED=Connection Test Succeed
-CONNECTION_TEST_FAILED=Connection Test Failed
+CONNECTION_TEST_SUCCEED=Connection Succeed
+CONNECTION_TEST_FAILED=Connection Failed
 UNSUPPORTED_ENCODING=Input Charset is Unsupported Encoing
 FILE_NOT_FOUND=Input file does not found
 DRIVER_CLASS_NOT_FOUND=Driver Class does not found
