git-svn-id: https://www.seasar.org/svn/chura/trunk@407 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -16,8 +16,8 @@
 SELECT_PROJECT=Select Dependent Java Project
 JDBC_DRIVER_FINDING=Finding Driver Class ...
 JDBC_DRIVER_FINDING_CANCELLED=Finding Driver Class Cancelled
-CONNECTION_TEST_SUCCEED=Connection Test Succeed
-CONNECTION_TEST_FAILED=Connection Test Failed
+CONNECTION_TEST_SUCCEED=Connection Succeed
+CONNECTION_TEST_FAILED=Connection Failed
 UNSUPPORTED_ENCODING=Input Charset is Unsupported Encoing
 FILE_NOT_FOUND=Input file does not found
 DRIVER_CLASS_NOT_FOUND=Driver Class does not found
