--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -49,3 +49,7 @@ ONLY_USE_VALID_URL={0} is Only Use Valid URL.
 INVALID_OUTPUT_FILE=Invalid output file path.
 COPY_FROM_AND_COPY_TO_ARE_SAME=Copy from File and Copy to File are same. Select differnt path.
 REGISTER_MOCKS=Register Mocks ...
+SELECT_ACTION_SCRIPT_ROOT=Select Action Script Root Folder.
+ContainerGroup_message = &Enter or select the parent folder:
+ContainerGroup_selectFolder = Select the folder:
+SELECT_FOLDER=Select Folder.
