As周りのリソース生成処理、作りかけ。
git-svn-id: https://www.seasar.org/svn/chura/trunk@416 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -49,3 +49,7 @@ ONLY_USE_VALID_URL={0} is Only Use Valid URL.
 INVALID_OUTPUT_FILE=Invalid output file path.
 COPY_FROM_AND_COPY_TO_ARE_SAME=Copy from File and Copy to File are same. Select differnt path.
 REGISTER_MOCKS=Register Mocks ...
+SELECT_ACTION_SCRIPT_ROOT=Select Action Script Root Folder.
+ContainerGroup_message = &Enter or select the parent folder:
+ContainerGroup_selectFolder = Select the folder:
+SELECT_FOLDER=Select Folder.
