--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -53,3 +53,4 @@ SELECT_ACTION_SCRIPT_ROOT=Select Action Script Root Folder.
 ContainerGroup_message = &Enter or select the parent folder:
 ContainerGroup_selectFolder = Select the folder:
 SELECT_FOLDER=Select Folder.
+SELECT_FLEX2_SERVICE=Select S2Flex2 Service Class ...
