--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -54,3 +54,4 @@ ContainerGroup_message = &Enter or select the parent folder:
 ContainerGroup_selectFolder = Select the folder:
 SELECT_FOLDER=Select Folder.
 SELECT_FLEX2_SERVICE=Select S2Flex2 Service Class ...
+SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
