git-svn-id: https://www.seasar.org/svn/chura/trunk@425 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -54,3 +54,4 @@ ContainerGroup_message = &Enter or select the parent folder:
 ContainerGroup_selectFolder = Select the folder:
 SELECT_FOLDER=Select Folder.
 SELECT_FLEX2_SERVICE=Select S2Flex2 Service Class ...
+SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
