--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -55,3 +55,6 @@ ContainerGroup_selectFolder = Select the folder:
 SELECT_FOLDER=Select Folder.
 SELECT_FLEX2_SERVICE=Select S2Flex2 Service Class ...
 SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
+PROCESS_VALIDATE=Process Validate ....
+ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
+ILLEGAL_PARAMETER_TYPE={0} type does not match.
