Kuina-DaoのQueryByParameter用のバリデーション機能実装完了。
git-svn-id: https://www.seasar.org/svn/chura/trunk@474 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -55,3 +55,6 @@ ContainerGroup_selectFolder = Select the folder:
 SELECT_FOLDER=Select Folder.
 SELECT_FLEX2_SERVICE=Select S2Flex2 Service Class ...
 SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
+PROCESS_VALIDATE=Process Validate ....
+ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
+ILLEGAL_PARAMETER_TYPE={0} type does not match.
