git-svn-id: https://www.seasar.org/svn/chura/trunk@539 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -58,3 +58,4 @@ SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
 PROCESS_VALIDATE=Process Validate ....
 ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
 ILLEGAL_PARAMETER_TYPE={0} type does not match.
+ILLEGAL_KEYWORD_TYPE={0} type must be {1}
