--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -58,4 +58,5 @@ SELECT_ACTION_SCRIPT_DTO=Select ActionScript Dto Class ...
 PROCESS_VALIDATE=Process Validate ....
 ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
 ILLEGAL_PARAMETER_TYPE={0} type does not match.
+ILLEGAL_PARAMETER_COUNT={0} contains dto parameter. but this method 2 or more parameters.
 ILLEGAL_KEYWORD_TYPE={0} type must be {1}
