git-svn-id: https://www.seasar.org/svn/chura/trunk@664 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.docs/plugin_ja.properties
+++ b/dolteng/org.seasar.dolteng.docs/plugin_ja.properties
@@ -14,6 +14,6 @@
 # governing permissions and limitations under the License.
 ###############################################################################
 plugin.author=Seasar\u30d5\u30a1\u30a6\u30f3\u30c7\u30fc\u30b7\u30e7\u30f3
-plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
+plugin.brand=Dolteng \u30c9\u30ad\u30e5\u30e1\u30f3\u30c8 \u30d7\u30e9\u30b0\u30a4\u30f3
 
 teedaExtensionHelp.label=View Teeda Extension Help
