Daoと.sqlファイルをマッピングする機能を実装した。@SqlFileアノテーションも評価する。
git-svn-id: https://www.seasar.org/svn/chura/trunk@693 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -60,3 +60,5 @@ ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
 ILLEGAL_PARAMETER_TYPE={0} type does not match.
 ILLEGAL_PARAMETER_COUNT={0} contains dto parameter. but this method 2 or more parameters.
 ILLEGAL_KEYWORD_TYPE={0} type must be {1}
+SQL_NOT_FOUND=.sql not found
+CREATE_NEW_SQL=Create New .sql file
