--- a/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -60,3 +60,5 @@ ILLEGAL_PARAMETER_NAME={0} does not exist in {1}.
 ILLEGAL_PARAMETER_TYPE={0} type does not match.
 ILLEGAL_PARAMETER_COUNT={0} contains dto parameter. but this method 2 or more parameters.
 ILLEGAL_KEYWORD_TYPE={0} type must be {1}
+SQL_NOT_FOUND=.sql not found
+CREATE_NEW_SQL=Create New .sql file
