WTPプロジェクト生成時にSysdeoTomcatプラグインを無効化、viewフォルダをsourceフォルダ指定から外す。
git-svn-id: https://www.seasar.org/svn/chura/trunk@784 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -39,6 +39,7 @@ PROCESS=Process ... {0}
 BEGINING_OF_CREATE=Create Chura Project ...
 RELOAD_RESOURCES=Reload copied resources ...
 ADD_NATURE_OF=Add {0} Nature ...
+REMOVE_NATURE_OF=Remove {0} Nature ...
 BUILD_PROJECT=Build Java Project
 RELOAD_DATABASE_VIEW=Reload Dolteng Database View
 PROCESS_MAPPING=Process Mapping ...{0}
