--- a/dolteng/org.seasar.dolteng.projects/plugin_ja.properties
+++ b/dolteng/org.seasar.dolteng.projects/plugin_ja.properties
@@ -15,3 +15,4 @@
 ###############################################################################
 plugin.author=Seasar\u30d5\u30a1\u30a6\u30f3\u30c7\u30fc\u30b7\u30e7\u30f3
 plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
+projectTypeDesc.521=SuperAgile\u30d7\u30ed\u30b8\u30a7\u30af\u30c8\u306e\u30b5\u30fc\u30d0\u7ba1\u7406\u3092WTP\u3067\u884c\u3044\u307e\u3059\u3002
