--- a/chura-tutorial/src/main/resources/appMessages_ja.properties
+++ b/chura-tutorial/src/main/resources/appMessages_ja.properties
@@ -1,2 +1,4 @@
 
 E0000001=\u691c\u7d22\u7d50\u679c\u304c\u3042\u308a\u307e\u305b\u3093\u3002
+errors.invalid.login=\u30ed\u30b0\u30a4\u30f3\u540d\u304b\u30d1\u30b9\u30ef\u30fc\u30c9\u304c\u4e0d\u6b63\u3067\u3059\u3002
+org.seasar.teeda.extension.component.TSelect.NULL_LABEL = 
