--- a/org.seasar.dolteng.projects/plugin_ja.properties
+++ b/org.seasar.dolteng.projects/plugin_ja.properties
@@ -16,16 +16,16 @@
 plugin.author=Seasar\u30d5\u30a1\u30a6\u30f3\u30c7\u30fc\u30b7\u30e7\u30f3
 plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3
 
-projectTypeDesc.Teeda=JSF\u306e\u5b9f\u88c5\u3068DI\u3068AOP\u306e\u6a5f\u80fd\u3092\u30d9\u30fc\u30b9\u3068\u3057\u305f\u62e1\u5f35\u6a5f\u80fd\u3092\u63d0\u4f9b\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-projectTypeDesc.SAStruts=Super Agile\u306bStruts\u3068Seasar2\u3067\u958b\u767a\u3059\u308b\u305f\u3081\u306e\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-projectTypeDesc.S2Flex2=Flex2\u3068S2Container\u3092\u9023\u643a\u3055\u305b\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea
-projectTypeDesc.S2Wicket=Wicket\u3068Seasar2 Container\u3092\u7d71\u5408\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea
+facetDesc.Teeda=JSF\u306e\u5b9f\u88c5\u3068DI\u3068AOP\u306e\u6a5f\u80fd\u3092\u30d9\u30fc\u30b9\u3068\u3057\u305f\u62e1\u5f35\u6a5f\u80fd\u3092\u63d0\u4f9b\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.SAStruts=Super Agile\u306bStruts\u3068Seasar2\u3067\u958b\u767a\u3059\u308b\u305f\u3081\u306e\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.S2Flex2=Flex2\u3068S2Container\u3092\u9023\u643a\u3055\u305b\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea
+facetDesc.S2Wicket=Wicket\u3068Seasar2 Container\u3092\u7d71\u5408\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea
 
-projectTypeDesc.S2Dao=XML\u306b\u3088\u308b\u30de\u30c3\u30d4\u30f3\u30b0\u5b9a\u7fa9\u3084\u5b9f\u88c5\u30b3\u30fc\u30c9\u3092\u5fc5\u8981\u3068\u3057\u306a\u3044O/R Mapping \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-projectTypeDesc.Kuina=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.S2Dao=XML\u306b\u3088\u308b\u30de\u30c3\u30d4\u30f3\u30b0\u5b9a\u7fa9\u3084\u5b9f\u88c5\u30b3\u30fc\u30c9\u3092\u5fc5\u8981\u3068\u3057\u306a\u3044O/R Mapping \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.Kuina=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
 
-projectTypeDesc.Sysdeo=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092Sysdeo Tomucat Plugin\u3067\u884c\u3046
-projectTypeDesc.WTP=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092WTP\u3067\u884c\u3046
+facetDesc.Sysdeo=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092Sysdeo Tomucat Plugin\u3067\u884c\u3046
+facetDesc.WTP=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092WTP\u3067\u884c\u3046
 
-projectTypeDesc.S2JMSo=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-projectTypeDesc.S2JMSio=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.S2JMSo=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.S2JMSio=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
