--- a/org.seasar.dolteng.projects/plugin_ja.properties
+++ b/org.seasar.dolteng.projects/plugin_ja.properties
@@ -22,7 +22,8 @@ facetDesc.S2Flex2=Flex2\u3068S2Container\u3092\u9023\u643a\u3055\u305b\u308b\u30
 facetDesc.S2Wicket=Wicket\u3068Seasar2 Container\u3092\u7d71\u5408\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea
 
 facetDesc.S2Dao=XML\u306b\u3088\u308b\u30de\u30c3\u30d4\u30f3\u30b0\u5b9a\u7fa9\u3084\u5b9f\u88c5\u30b3\u30fc\u30c9\u3092\u5fc5\u8981\u3068\u3057\u306a\u3044O/R Mapping \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-facetDesc.Kuina=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.KuinaHibernate=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+facetDesc.KuinaTopLink=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
 
 facetDesc.Sysdeo=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092Sysdeo Tomucat Plugin\u3067\u884c\u3046
 facetDesc.WTP=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092WTP\u3067\u884c\u3046
