--- a/org.seasar.dolteng.projects/plugin_ja.properties
+++ b/org.seasar.dolteng.projects/plugin_ja.properties
@@ -28,5 +28,7 @@ facetDesc.KuinaTopLink=JPA (Java Persistence API) \u30d5\u30ec\u30fc\u30e0\u30ef
 facetDesc.Sysdeo=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092Sysdeo Tomucat Plugin\u3067\u884c\u3046
 facetDesc.WTP=AP\u30b5\u30fc\u30d0\u306e\u30a4\u30f3\u30b9\u30bf\u30f3\u30b9\u7ba1\u7406\u3092WTP\u3067\u884c\u3046
 
+facetDesc.S2JMSi=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
 facetDesc.S2JMSo=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
-facetDesc.S2JMSio=\u975e\u540c\u671f\u30e1\u30c3\u30bb\u30fc\u30b8\u30f3\u30b0\u3092\u5bb9\u6613\u306b\u9001\u53d7\u4fe1\u3059\u308b\u305f\u3081\u306e\u30e9\u30a4\u30d6\u30e9\u30ea\u3068\u3001\u53d7\u4fe1\u30e1\u30c3\u30bb\u30fc\u30b8\u3092S2Container\u306e\u30b3\u30f3\u30dd\u30fc\u30cd\u30f3\u30c8\u306b\u30d0\u30a4\u30f3\u30c7\u30a3\u30f3\u30b0\u3059\u308b\u30d5\u30ec\u30fc\u30e0\u30ef\u30fc\u30af
+
+facetDesc.S2RMIc=...
