--- a/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -63,3 +63,4 @@ ILLEGAL_PARAMETER_COUNT={0} contains dto parameter. but this method 2 or more pa
 ILLEGAL_KEYWORD_TYPE={0} type must be {1}
 SQL_NOT_FOUND=.sql not found
 CREATE_NEW_SQL=Create New .sql file
+DOWNLOAD_FROM_MAVEN_REPOS=Download... {0} v{1}
