--- a/org.seasar.dolteng.eclipse.dependency.feature/feature_ja.properties
+++ b/org.seasar.dolteng.eclipse.dependency.feature/feature_ja.properties
@@ -14,4 +14,4 @@
 # governing permissions and limitations under the License.
 ###############################################################################
 author=Seasar\u30d5\u30a1\u30a6\u30f3\u30c7\u30fc\u30b7\u30e7\u30f3
-plugin.brand=Dolteng Eclipse \u30d7\u30e9\u30b0\u30a4\u30f3 (\u30aa\u30d5\u30e9\u30a4\u30f3\u7528) (optional)
+plugin.brand=Dolteng \u30aa\u30d5\u30e9\u30a4\u30f3\u7528\u4f9d\u5b58\u30e9\u30a4\u30d6\u30e9\u30ea (optional)
