ウィザードのカテゴリおよび、メッセージリソースに含まれるChuraをDoltengに変更
git-svn-id: https://www.seasar.org/svn/chura/trunk@978 6a3759fa-7269-4e70-8ae1-ab844f716fa1

--- a/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
+++ b/dolteng/org.seasar.dolteng.eclipse.plugin/src/main/resources/org/seasar/dolteng/eclipse/nls/Messages.properties
@@ -27,7 +27,7 @@ CONNECTION_URL_EMPTY=Connection URL is Empty
 PLUGIN_INITIALIZING=Dolteng Plugin initializing ....
 JDBC_DICON_LOADING=load jdbc.dicon
 ImportsStructure_operation_description=Updating imports...
-CHURA_PROJECT_DESCRIPTION=Create a Chura project in the workspace or in an external location.
+CHURA_PROJECT_DESCRIPTION=Create a Dolteng project in the workspace or in an external location.
 CREATING_PROJECT=Creating Project ....
 CREATE_BASE_PROJECT=Create Base Project ....
 PACKAGE_NAME_IS_EMPTY=Package name is Empty.
